Fix layout drawer visibility

--- a/docs/src/styles/_layout-drawer.scss
+++ b/docs/src/styles/_layout-drawer.scss
@@ -31,6 +31,14 @@
     transition: opacity .25s, transform .5s cubic-bezier(0.19, 1, 0.22, 1);
     opacity: 1;
   }
+
+  &.is-closing {
+    visibility: visible;
+  }
+
+  &.is-closed {
+    visibility: hidden;
+  }
 }
 
 /**
